--- a/css/typo.scss
+++ b/css/typo.scss
@@ -32,6 +32,13 @@
     src: url('../fonts/Aeonik-Bold.otf');
     font-display: swap;
 }
+@font-face {
+    font-family: 'Georgia';
+    font-weight: 400;
+    font-style: italic;
+    src: url('../fonts/Georgia Italic.ttf');
+    font-display: swap;
+}
 
 .txt {
     font-family: 'Aeonik';
@@ -58,10 +65,13 @@
     &-subscript {
         vertical-align: sub;
     }
+    &-btn {
+        font-family: "Poppins";
+    }
 }
 
 //heading
-@for $i from 1 through 6 {
+@for $i from 0 through 6 {
     h#{$i}, .h#{$i} {
         @include text(var(--h#{$i}-fs), var(--h#{$i}-lh))
     }
@@ -78,6 +88,9 @@
     &-12 {
         @include size(1.2rem);
     }
+    &-16 {
+        @include size(1.6rem);
+    }
     &-20 {
         @include size(2rem);
     }
@@ -86,6 +99,9 @@
     }
     &-32 {
         @include size(3.2rem);
+    }
+    &-64 {
+        @include size(6.4rem);
     }
     &-80 {
         @include size(8rem);
@@ -110,6 +126,7 @@
     position: relative;
     overflow: hidden;
     z-index: 1;
+    border-radius: .2rem;
     &::before,
     &::after {
         content: '';
@@ -142,9 +159,46 @@
         border: 1px solid rgba($cl-border, .2);
         background-color: transparent;
         color: rgba($cl-txt, 1);
+        @include transition(color 0.3s cubic-bezier(0.75, 0, 0.125, 1));
+        &:hover {
+            color: rgba($cl-white, 1);
+        }
+    }
+    &-white {
+        background-color: rgba($cl-white, 1);
+        color: rgba($cl-txt, 1);
+    }
+    &-sm {
+        padding: .9rem 1.9rem;
     }
 }
-
+.line {
+    width: 100%;
+    height: 1px;
+    background-color: #F6F1EE;
+}
+.label-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: .9rem 1.9rem;
+    border-radius: 1.6rem;
+    border: 1px solid rgba($cl-border, .2);
+    color: $cl-txt-sub;
+    .txt.txt-16 {
+        line-height: 1.2em;
+    }
+}
+@include md {
+    .label-wrap {
+        padding: .7rem 1.9rem;
+        border-radius: 9.9rem;
+        .txt.txt-16 {
+            font-size: 1.4rem;
+            line-height: 1.5em;
+        }
+    }  
+}
 .heading {
     font-family: 'Poppins';
     font-weight: 500;
@@ -206,4 +260,9 @@ img {
         right: 0;
         bottom: 0;
     }
+}
+.vid-bg {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
