--- a/css/variables.scss
+++ b/css/variables.scss
@@ -1,8 +1,11 @@
 :root {
-    --h1-fs: 10rem;
-    --h1-lh: .9em;
+    --h0-fs: 10rem;
+    --h0-lh: .9em;
+    
+    --h1-fs: 7.2rem;
+    --h1-lh: 1.1em;
 
-    --h2-fs: 8.4rem;
+    --h2-fs: 6.2rem;
     --h2-lh: 1.2em;
 
     --h3-fs: 5.2rem;
@@ -14,8 +17,8 @@
     --h5-fs: 3.2em;
     --h5-lh: 1.3em;
 
-    --h6-fs: 3.2rem;
-    --h6-lh: 1.2em;
+    --h6-fs: 2.4rem;
+    --h6-lh: 1.3em;
 
     --fs-12: 1.2rem;
     --lh-12: 1.6em;
@@ -30,7 +33,7 @@
     --lh-18: 1.6em;
 
     --fs-20: 2rem;
-    --lh-20: 1.3em;
+    --lh-20: 1.5em;
 
     --fs-24: 2.4rem;
     --lh-24: 1.3em;
@@ -42,14 +45,21 @@
     --lh-36: 1.2em;
 
     @media only screen and (max-width: 991px) {
+        --h0-fs: 4.4rem;
+        --h0-lh: 1.2em;
+
         --h1-fs: 7.2rem;
 
         --h2-fs: 5.2rem;
 
-        --h3-fs: 3.4rem;
+        --h3-fs: 2.4rem;
+        --h3-lh: 1.3em;
 
         --h4-fs: 2.6rem;
         --h4-lh: 1.5em;
+
+        --h5-fs: 2em;
+        --h5-lh: 1.5em;
 
         --h6-fs: 2rem;
         --h6-lh: 1.4em;
