--- a/css/variables.scss
+++ b/css/variables.scss
@@ -48,7 +48,8 @@
         --h0-fs: 4.4rem;
         --h0-lh: 1.2em;
 
-        --h1-fs: 7.2rem;
+        --h1-fs: 5.2rem;
+        --h2-lh: 1.2em;
 
         --h2-fs: 5.2rem;
 
@@ -63,16 +64,6 @@
 
         --h6-fs: 2rem;
         --h6-lh: 1.4em;
-
-        --fs-36: 2.4rem;
-        --lh-36: 1.3em;
-
-        --fs-24: 2rem;
-
-        --fs-20: 1.8rem;
-        --lh-20: 1.6em;
-
-        --fs-18: 1.6rem;
     }
     @media only screen and (max-width: 767px) {
         --h1-fs: 6rem;
