--- a/css/footer.scss
+++ b/css/footer.scss
@@ -172,7 +172,7 @@
                         @include transform(scaleX(0%))
                     }
                 }
-                &:hover {
+                &:hover, &.active {
                     .line-inner {
                         @include transform(scaleX(100%))
                     }
@@ -190,6 +190,10 @@
         }
         &-copy-txt {
             color: rgba($cl-white, .3);
+            @include transition(color 400ms ease);
+            &:hover, &.active {
+                color: rgba($cl-white, .6);
+            }
         }
         &-term {
             display: flex;
@@ -200,7 +204,11 @@
                 align-items: center;
                 column-gap: 1.6rem;
                 &-link {
-                    color: rgba($cl-white, .3);   
+                    color: rgba($cl-white, .3);
+                    @include transition(color 400ms ease);
+                    &:hover {
+                        color: rgba($cl-white, 8);
+                    }
                 }
                 &-div {
                     color: rgba($cl-white, .1);
@@ -352,6 +360,153 @@
                     padding-bottom: 2.4rem;
                     font-size: 2.4rem;
                     line-height: 1.3em;
+                }
+            }
+            &-bottom {
+                padding-top: 2.4rem;
+                padding-bottom: 2.4rem;
+            }
+            &-copy-txt,
+            &-term-item-link,
+            &-term-item-div {
+                font-size: 1.4rem;
+                line-height: 1.5em;
+            }
+        }
+    }
+}
+@include sm {
+    .footer {
+        .decor-slash {
+            margin-bottom: 2.4rem;
+        }
+        .ft {
+            &-abt {
+                margin-bottom: 0;
+                border-bottom: none;
+                &-main {
+                    display: flex;
+                    flex-direction: column;
+                    column-gap: 0rem;
+                    margin-bottom: 4rem;
+                }
+                &-info {
+                    grid-column: 1/6;
+                    border-bottom: none;
+                    margin-bottom: 0;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    text-align: center;
+                    &-name {
+                        margin-bottom: .6rem;
+                        line-height: 1.4em;
+                    }
+                    &-job {
+                        margin-bottom: 2.4rem;
+                    }
+                    &-quote {
+                        margin-bottom: 0rem;
+                        font-size: 2.4rem;
+                    }
+                    &-btn-wrap {
+                        &.hidden-dk {
+                            margin-bottom: 2.4rem;
+                            .btn.btn-outline {
+                                width: 100%;
+                            }
+                        }
+                    }
+                }
+                &-form-wrap {
+                    padding-top: 2.4rem;
+                }
+                &-form-title {
+                    margin-bottom: 1.2rem;
+                    font-size: 1.6rem;
+                    line-height: 1.6em;
+                }
+                &-form {
+                    column-gap: 1rem;
+                    .input-label {
+
+                    }
+                    .input-wrap {
+                        .input-field {
+                            padding-top: 1.6rem;
+                            padding-bottom: 1.6rem;
+                        }
+                    }
+                }
+            }
+            &-ctc {
+                grid-column: 1/-1;
+                margin-bottom: 4rem;
+                row-gap: 2.4rem;
+                &-grp {
+                    &-li {
+                        row-gap: .8rem;
+                    }
+                    &-label {
+                        font-size: 1.6rem;
+                        line-height: 1.6em;
+                        margin-bottom: 1.2rem;
+                    }
+                }
+                &-link {
+                    column-gap: .8rem;
+                    &-txt {
+                        font-size: 2rem;
+                        line-height: 1.4em;
+                    }
+                }
+            }
+            &-menu {
+                grid-column: 1/-1;
+                margin-bottom: 2.4rem;
+                &-ul {
+                    display: grid;
+                    grid-template-columns: repeat(2, 1fr);
+                    column-gap: 1.6rem;
+                }
+                &-link {
+                    &:last-child {
+                        .line {
+                            display: none;    
+                        }
+                    }
+                }
+                &-link-txt {
+                    padding-top: 2rem;
+                    padding-bottom: 2rem;
+                    font-size: 2rem;
+                    line-height: 1.4em;
+                    color: rgba($cl-white, .6);
+                    @include transition(color 400ms ease);
+                    .line-inner {
+                        display: none;
+                    }
+                    &:hover, &.active {
+                        color: rgba($cl-white, 1);
+                    }
+                }
+            }
+            &-bottom {
+                padding-top: 1.6rem;
+                padding-bottom: 2rem;
+                flex-direction: column;
+                column-gap: 0;
+                row-gap: .4rem;
+            }
+            &-copy-txt {
+                color: rgba($cl-white, .3);
+            }
+            &-term {
+                column-gap: .8rem;
+                &-item {
+                    display: flex;
+                    align-items: center;
+                    column-gap: .8rem;
                 }
             }
         }
