--- a/css/header.scss
+++ b/css/header.scss
@@ -80,6 +80,7 @@
         }
         &-nav {
             position: absolute;
+            z-index: 4;
             top: 0;
             right: 1.6rem;
             padding: 3rem;
@@ -89,11 +90,11 @@
             transform-origin: 100% 0%;
             will-change: transform;
             @include transition(all 400ms ease-out);
-            @include transform(translateY(-1rem) scale(0, 0));
+            @include transform(translate(-2rem, 1rem) scale(0, 0));
             pointer-events: none;
             &.active {
                 pointer-events: auto;
-                @include transform(translateY(0rem) scale(1, 1));
+                @include transform(translate(0rem, 0rem) scale(1, 1));
             }
             &-close-ic {
                 display: block;
@@ -101,6 +102,9 @@
                 top: 1.6rem;
                 right: 1.6rem;
             }
+        }
+        &-links {
+            width: 100%;
         }
         &-links-ul {
             flex-direction: column;
@@ -141,10 +145,12 @@
                 bottom: 0;
                 left: 0;
                 .line-inner {
+                    display: block;
                     width: 100%;
                     height: 2px;
                     background-color: rgba($cl-white, 1);
                     position: absolute;
+                    z-index: 2;
                     bottom: 0;
                     left: 0;
                     transform-origin: left;
@@ -152,7 +158,7 @@
                     @include transform(scaleX(0))
                 }
             }
-            &.active {
+            &.active, &:hover {
                 .line-inner {
                     @include transform(scaleX(1))
                 }
@@ -168,6 +174,26 @@
             background-color: rgba($cl-white, 1);
             padding-top: 1.6rem;
             padding-bottom: 1.6rem;
+        }
+    }
+}
+@include sm {
+    .header {
+        &-logo {
+            grid-column: 1/2;
+            grid-row: 1/2;
+        }
+        &-toggle {
+            grid-column: 3/5;
+            grid-row: 1/2;
+        }
+        &-nav { 
+            grid-column: 1/-1;
+            grid-row: 1/2;
+            left: -1.1rem; 
+            right: -1.1rem;
+            top: -1.1rem;
+            @include transform(translate(-1rem, 1rem) scale(0, 0));
         }
     }
 }
