--- a/css/common.scss
+++ b/css/common.scss
@@ -45,7 +45,7 @@ html {
         font-size: 1.1990407674vw;
     }
     @media only screen and (max-width: 767px) {
-        font-size: 1.3vw;
+        font-size: 1.8vw;
     }
     @media only screen and (max-width: 476px) {
         font-size: 2.667vw;
@@ -119,4 +119,25 @@ button {
     background-image: url('../imgs/decor-slash.svg');
     background-repeat: repeat-x;
     background-position: 0% 0%;
+}
+
+.cursor {
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    &-wrap {
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+    &-inner {
+        position: absolute;
+        @include transform(translate(-50%, -50%));
+        top: 0;
+        left: 0;
+        
+    }
 }
