--- a/css/home.scss
+++ b/css/home.scss
@@ -167,10 +167,10 @@
     .home-hero-mid {
         &-img {
             grid-column: 1/-1;
-            margin-top: -10.5rem;
-            margin-left: -1rem;
+            margin-top: -7.6rem;
+            margin-left: -.5rem;
             margin-right: 0rem;
-            margin-bottom: -4.6rem;
+            margin-bottom: -2.6rem;
         }
         &-line {
             &.show-tb {
@@ -187,7 +187,6 @@
         &-img {
             margin-top: -5rem;
             margin-left: 0;
-            margin-bottom: -2.6rem;
         }
     }
 }
