--- a/css/common.scss
+++ b/css/common.scss
@@ -128,6 +128,7 @@ button {
     width: 100%;
     height: 100%;
     position: fixed;
+    pointer-events: none;
     &-wrap {
         position: absolute;
         top: 0;
@@ -138,6 +139,6 @@ button {
         @include transform(translate(-50%, -50%));
         top: 0;
         left: 0;
-        
+
     }
 }
